# ros2_udemy

./: README.md
activity_pkgs/: CMakeLists.txt  cheatSheet  package.xml
activity_pkgs/launch/: a6_radio_station.launch.py  project_turtlesim.launch.py
activity_pkgs/msg/: LedPanelStatus.msg
activity_pkgs/src/: a02_number_counter.cpp  a02_number_pub.cpp  a03_numberCounterReset.cpp  a04_batteryState_pub.cpp  a04_led_panel.cpp  project_spawn_turtle.cpp
activity_pkgs/srv/: SetLed.srv
course_1_beginner/activity_pkgs/: CMakeLists.txt
course_1_beginner/activity_pkgs/src/: a04_batteryState_Monitor.cpp  a04_led_panel.cpp  project_control_turtle.cpp  project_spawn_turtle.cpp
course_1_beginner/activity_pkgs/srv/: SetLed.srv
course_1_beginner/my_pkg_cpp/: CMakeLists.txt  package.xml
course_1_beginner/my_pkg_cpp/src/: add_two_int_client_oop.cpp  add_two_int_client_simple.cpp  template.cpp
course_1_beginner/my_robot_interfaces/: CMakeLists.txt
course_2_hardwareSimulation/: CMakeLists.txt  cheatsheet2.txt
course_2_hardwareSimulation/launch/: arm_standalone.launch.py  display_robot.launch.py  my_robot_gazebo.launch.py
course_2_hardwareSimulation/my_robot_description/: CMakeLists.txt  package.xml
course_2_hardwareSimulation/my_robot_description/launch/: display_robot.launch.py
course_2_hardwareSimulation/my_robot_description/rviz/: my_robot.rviz
course_2_hardwareSimulation/my_robot_description/urdf/: my_robot.urdf
course_2_hardwareSimulation/rviz/: arm_standalone.rviz  my_robot.rviz
course_2_hardwareSimulation/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  standalone_arm.xacro
course_2_hardwareSimulation/world/: my_robot.world
course_3_action_server/action_server/: CMakeLists.txt  package.xml
course_3_action_server/action_server/src/: count_until_client.cpp  count_until_queue_goals_server.cpp  count_until_server.cpp
course_3_action_server/activity_pkg/: CMakeLists.txt  package.xml
course_3_action_server/activity_pkg/msg/: CancelMove.msg
course_3_action_server/activity_pkg/src/: activity1_action_client.cpp  activity1_action_server.cpp
my_pkg_cpp/: CMakeLists.txt  package.xml
my_pkg_cpp/src/: add_two_int_servers.cpp  first_node.cpp  hardware_status_pub.cpp  number_publisher_param.cpp  robot_news_station.cpp  smartphone.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: number_app.launch.py
my_robot_interfaces/: package.xml
my_robot_interfaces/msg/: HardwareStatus.msg
